# quizlyx

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_tests.yml
client/: CMakeLists.txt  main.cpp
client/app/: Application.cpp  Application.hpp
client/controller/: GameController.cpp  GameController.hpp
client/model/: PlayerEntry.hpp  Protocol.cpp  Protocol.hpp  Quiz.cpp  Quiz.hpp  SessionState.cpp  SessionState.hpp
client/network/: NetworkClient.cpp  NetworkClient.hpp
client/resources/: style.qss
client/tests/: CMakeLists.txt  test_e2e.cpp  test_game_controller.cpp  test_network_client.cpp  test_player_list_widget.cpp  test_protocol.cpp  test_session_state.cpp  test_ui_theme.cpp
client/ui/: MainWindow.cpp  MainWindow.hpp  Theme.cpp  Theme.hpp
client/ui/pages/: ConnectPage.cpp  ConnectPage.hpp  FinalPage.cpp  FinalPage.hpp  HostLobbyPage.cpp  HostLobbyPage.hpp  JoinPage.cpp  JoinPage.hpp  LeaderboardPage.cpp  LeaderboardPage.hpp  PlayerLobbyPage.cpp  PlayerLobbyPage.hpp  QuestionPage.cpp  QuestionPage.hpp  QuizEditorPage.cpp  QuizEditorPage.hpp  RoleSelectPage.cpp  RoleSelectPage.hpp
client/ui/widgets/: AnswerButton.cpp  AnswerButton.hpp  CountdownBar.cpp  CountdownBar.hpp  LeaderboardWidget.cpp  LeaderboardWidget.hpp  PlayerListWidget.cpp  PlayerListWidget.hpp
docs/: about.md  business_logic.md
lib/: CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/nlohmann_json/: CMakeLists.txt
lib/qt/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp
server/app/: command_handler.cpp  command_handler.hpp
server/demo/: main.cpp
server/domain/: answer.hpp  quiz.cpp  quiz.hpp  session.cpp  session.hpp  types.hpp
server/events/: game_events.hpp
server/interfaces/: ibroadcast_sink.hpp  icommand_handler.hpp  iquiz_storage.hpp  isession_storage.hpp  itime_provider.hpp
server/network/: game_controller.cpp  game_controller.hpp  json_protocol.cpp  json_protocol.hpp  ws_broadcast_sink.cpp  ws_broadcast_sink.hpp  ws_connection.cpp  ws_connection.hpp  ws_connection_manager.cpp  ws_connection_manager.hpp  ws_server.cpp  ws_server.hpp
server/services/: in_memory_quiz_storage.cpp  in_memory_quiz_storage.hpp  quiz_registry.cpp  quiz_registry.hpp  scoring.cpp  scoring.hpp  session_manager.cpp  session_manager.hpp  session_timer_service.cpp  session_timer_service.hpp
tests/: CMakeLists.txt  main_tests.cpp  network_integration_test.cpp  server_business_logic_demo_test.cpp
tests/test_suites/: ProjectIntegrationTestSuite.cpp  ProjectIntegrationTestSuite.hpp
